# Kinapse

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
asm/: annotated_asm.md
bench/: CMakeLists.txt
bench/src/: bench_layer.cpp  bench_predict.cpp  bench_tick.cpp
script/: data_compiler.py
snn/: CMakeLists.txt
snn/include/: engine.hpp
snn/include/matching/: Bitboard.hpp  OrderEngine.hpp  PriceLevel.hpp  Trade.hpp
snn/include/memory/: Arena.hpp  FreeList.hpp  IntrusiveNode.hpp  OrderPool.hpp
snn/include/snn/: DendriticPopulation.hpp  ReadoutPopulation.hpp  SnnInferencer.hpp  SurrogateGradient.hpp  SynapticLayer.hpp  WeightsFormat.hpp
trainer/: CMakeLists.txt
trainer/include/: SnnTrainer.hpp
trainer/src/: SnnTrainer.cpp  main.cpp
